--- a/compose.yaml
+++ b/compose.yaml
@@ -7,3 +7,20 @@ services:
       - 'POSTGRES_USER=user'
       - 'POSTGRES_DB=bookkeeping'
       - 'POSTGRES_PASSWORD=user'
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U user -d bookkeeping"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+
+  application:
+    build: .
+    ports:
+      - '8080:8080'
+    environment:
+      - 'SPRING_DATASOURCE_URL=jdbc:postgresql://database:5432/bookkeeping'
+      - 'SPRING_DATASOURCE_USERNAME=user'
+      - 'SPRING_DATASOURCE_PASSWORD=user'
+    depends_on:
+      database:
+        condition: service_healthy
